Booking: Implement more conditional checks on `GET` booking response
Signed-off-by: Niels Thykier <nit@globeteam.com>